--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
     <footer class="footer">
             <nav class="navbar container">
                 <ul class="navbar__item">
-                    <li class="navbar_item"><a class="navbar_link" href="./pages/shop.html">SHOP</a></li>
-                    <li class="navbar_item"><a class="navbar_link" href="./pages/register.html">REGISTRARSE</a></li>
-                    <li class="navbar_item"><a class="navbar_link" href="./pages/login.html">LOGIN</a></li>
-                    <li class="navbar_item"><a class="navbar_link" href="./pages/contact.html">CONTACTO</a></li>
+                    <li class="navbar__item"><a class="navbar__link" href="./pages/shop.html">SHOP</a></li>
+                    <li class="navbar__item"><a class="navbar__link" href="./pages/register.html">REGISTRARSE</a></li>
+                    <li class="navbar__item"><a class="navbar__link" href="./pages/login.html">LOGIN</a></li>
+                    <li class="navbar__item"><a class="navbar__link" href="./pages/contact.html">CONTACTO</a></li>
                 </ul>
                 <picture class="navbar__logo">
                     <img src="./img/branding/isotype.svg" alt="Isotipo de la marca Funkoshop">
