--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                     </ul>
                 </li>
                 <li class="navbar__item">
-                    <a class="navbar__link" href="./pages/contact.html">CONTACTO</a>
+                    <a class="navbar__link" href="./pages/admin/contact.html">CONTACTO</a>
                 </li>
                 <li class="navbar__item">
-                    <a class="navbar__link" href="./pages/login.html">LOGIN</a>
+                    <a class="navbar__link" href="./pages/admin/login.html">LOGIN</a>
                 </li>
                 <li class="navbar__item">
-                    <a class="navbar__cart" href="./pages/cart.html">
+                    <a class="navbar__cart" href="./pages/shop/carrito.html">
                         <img src="./img/icons/cart-icon.svg" alt="icono de carrito">
                     </a>
                 </li>
@@ -151,10 +151,10 @@
     <footer class="footer">
             <nav class="navbar container">
                 <ul class="navbar__item">
-                    <li class="navbar__item"><a class="navbar__link" href="./pages/shop.html">SHOP</a></li>
-                    <li class="navbar__item"><a class="navbar__link" href="./pages/register.html">REGISTRARSE</a></li>
-                    <li class="navbar__item"><a class="navbar__link" href="./pages/login.html">LOGIN</a></li>
-                    <li class="navbar__item"><a class="navbar__link" href="./pages/contact.html">CONTACTO</a></li>
+                    <li class="navbar__item"><a class="navbar__link" href="./pages/shop/shop.html">SHOP</a></li>
+                    <li class="navbar__item"><a class="navbar__link" href="./pages/admin/register.html">REGISTRARSE</a></li>
+                    <li class="navbar__item"><a class="navbar__link" href="./pages/admin/login.html">LOGIN</a></li>
+                    <li class="navbar__item"><a class="navbar__link" href="./pages/admin/contact.html">CONTACTO</a></li>
                 </ul>
                 <picture class="navbar__logo">
                     <img src="./img/branding/isotype.svg" alt="Isotipo de la marca Funkoshop">
