--- a/pages/admin/admin.html
+++ b/pages/admin/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CREATE | Funkoshop</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../../css/styles.css">
 
     <!--Google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -30,7 +30,7 @@
                     <a class="navbar__link" href="./admin.html">ADMIN</a>
                 </li>
                 <li class="navbar__item">
-                    <a class="navbar__link" href="../index.html">SALIR</a>
+                    <a class="navbar__link" href="../../index.html">SALIR</a>
                 </li>
             </ul>
         </nav>
@@ -40,7 +40,7 @@
     <footer class="footer">
         <nav class="navbar container">
             <ul class="navbar__item">
-                <li class="navbar__item"><a class="navbar__link" href="./shop/shop.html">SHOP</a></li>
+                <li class="navbar__item"><a class="navbar__link" href="../shop/shop.html">SHOP</a></li>
                 <li class="navbar__item"><a class="navbar__link" href="./register.html">REGISTRARSE</a></li>
                 <li class="navbar__item"><a class="navbar__link" href="./login.html">LOGIN</a></li>
                 <li class="navbar__item"><a class="navbar__link" href="./contact.html">CONTACTO</a></li>
