--- a/pages/admin/register.html
+++ b/pages/admin/register.html
@@ -19,7 +19,7 @@
         <nav class="navbar container">
             <picture class="navbar__logo">
                 <a href="../index.html">
-                    <img src="../img/branding/logo_light_horizontal.svg" alt="Isologotipo de la marca Funkoshop">
+                    <img src="../../img/branding/logo_light_horizontal.svg" alt="Isologotipo de la marca Funkoshop">
                 </a>
             </picture>
             <ul class="navbar__menu">
@@ -46,7 +46,7 @@
                 <li class="navbar__item"><a class="navbar__link" href="./contact.html">CONTACTO</a></li>
             </ul>
             <picture class="navbar__logo">
-                <img src="../img/branding/isotype.svg" alt="Isotipo de la marca Funkoshop">
+                <img src="../../img/branding/isotype.svg" alt="Isotipo de la marca Funkoshop">
             </picture>
 
         </nav>
