--- a/pages/admin/contact.html
+++ b/pages/admin/contact.html
@@ -33,6 +33,7 @@
                     <a class="navbar__link" href="../index.html">SALIR</a>
                 </li>
             </ul>
+            <iconify-icon class="icon-bar" icon="fe:bar"></iconify-icon>
         </nav>
     </header><!--Fin Header-->
 
