--- a/pages/admin/create.html
+++ b/pages/admin/create.html
@@ -48,7 +48,7 @@
             <picture class="navbar__logo">
                 <img src="../../img/branding/isotype.svg" alt="Isotipo de la marca Funkoshop">
             </picture>
-
+            <iconify-icon class="icon-bar" icon="fe:bar"></iconify-icon>
         </nav>
         <p class="footer__copy">All rights reserved 2023 - Funkoshop &copy;</p>
 </footer>
