--- a/pages/admin/create.html
+++ b/pages/admin/create.html
@@ -53,5 +53,6 @@
         <p class="footer__copy">All rights reserved 2023 - Funkoshop &copy;</p>
 </footer>
 
-
+    <!--Iconos-->
+    <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
 </body>
