shop page responsive

--- a/pages/shop/shop.html
+++ b/pages/shop/shop.html
@@ -22,7 +22,7 @@
             </picture>
             <ul class="navbar__menu">
                 <li class="navbar__item with-submenu">
-                    <a class="navbar__link with-icon" href="./pages/shop/shop.html">SHOP<iconify-icon icon="mdi:chevron-down"></iconify-icon></a>
+                    <a class="navbar__link with-icon" href="./shop.html">SHOP<iconify-icon icon="mdi:chevron-down"></iconify-icon></a>
                     <ul class="submenu">
                         <li class="submenu__item">
                             <a href="" class="submenu__link">Funkos</a>
@@ -36,13 +36,13 @@
                     </ul>
                 </li>
                 <li class="navbar__item">
-                    <a class="navbar__link" href="./pages/contact.html">CONTACTO</a>
+                    <a class="navbar__link" href="../admin/contact.html">CONTACTO</a>
                 </li>
                 <li class="navbar__item">
-                    <a class="navbar__link" href="./pages/login.html">LOGIN</a>
+                    <a class="navbar__link" href="../../pages/admin/login.html">LOGIN</a>
                 </li>
                 <li class="navbar__item">
-                    <a class="navbar__cart" href="./pages/cart.html">
+                    <a class="navbar__cart" href="./carrito.html">
                         <img src="../../img/icons/cart-icon.svg" alt="icono de carrito">
                     </a>
                 </li>
@@ -52,62 +52,56 @@
     </header><!--Fin Header-->
     <main id="shop-main" class="container">
         <aside class="aside-filter">
-            <form action="">
-                <div class="filter">
-                    <label class="filter__search" for="categorias">BUSCAR</label>
-                    <input class="filter__input" type="text" placeholder="item o categoría" name="categorias" id="categorias">
-                </div>
-            </form>   
-            <form action="">
-                <h3>ORDENAR POR</h3>
-                <select name="ordenar" id="ordenar" placeholder="Mayor a menor">
-                    <option value="precio">PRECIO</option>
-                    <option value="abc">A-Z</option>
-                </select>
-            </form>
-            <div>
-                <h3>PRECIO</h3>
-                <form action="">
-                    <div class="filter-price">
-                        <label for="">MIN</label>
-                        <input type="number" placeholder="0">
-                        <label for="">MAX</label>
-                        <input type="number" placeholder="0">
-                    </div>
-                </form>
+            <div class="filter">
+                <label class="filter__search" for="search">BUSCAR</label>
+                <input class="filter__input" type="text" placeholder="item o categoría" name="search" id="search">
             </div>
             <div>
-                <form action="">
-                    <div>
-                        <h3>FILTRAR</h3>
-                        <div>
-                            <input type="checkbox" name="filtro" id="filtro" value="nuevos">
-                            <label for="">NUEVOS</label>
-                        </div>
-                        <div>
-                            <input type="checkbox" name="filtro" id="filtro" value="ofertas">
-                            <label for="">OFERTAS</label>
-                        </div>
-                        <div>
-                            <input type="checkbox" name="filtro" id="filtro" value="especial">
-                            <label for="">EDICIÓN ESPECIAL</label>
-                        </div>
-                        <div>
-                            <input type="checkbox" name="filtro" id="filtro" value="favoritos">
-                            <label for="">FAVORITOS</label>
-                        </div>
-                    </div>
-                </form>
+                <span for="orderby">ORDENAR POR</span>
+                <select name="orderby" id="orderby" placeholder="Mayor a menor">
+                    <option value="az">A-Z</option>
+                    <option value="za">Z-A</option>
+                    <option value="desc">Mayor precio</option>
+                    <option value="asc">Menor precio</option>
+                </select>
+            </div>   
+            <div>
+                <span>PRECIO</span>
+                <div class="filter-price">
+                    <label for="min">MIN</label>
+                    <input type="text" name="min" id="min" placeholder="0">
+                    <label for="max">MAX</label>
+                    <input type="text" name="max" id="max" placeholder="0">
+                </div>
+            </div>
+            <div>
+                <span for ="filter">FILTRAR</span>
+                <div>
+                    <input type="checkbox" name="filter" id="news" value="nuevos">
+                    <label for="">NUEVOS</label>
+                </div>
+                <div>
+                    <input type="checkbox" name="filter" id="offers" value="ofertas">
+                    <label for="">OFERTAS</label>
+                </div>
+                <div>
+                    <input type="checkbox" name="filter" id="edition" value="especial">
+                    <label for="">EDICIÓN ESPECIAL</label>
+                </div>
+                <div>
+                    <input type="checkbox" name="filter" id="favs" value="favoritos">
+                    <label for="">FAVORITOS</label>
+                </div>
             </div>
         </aside>
-        <section>
+        <section class="shop__content">
             <ul id="shop-productos">
-                <li>
+                <li class="shop__item">
                     <article class="card-item">
                         <a class="card-item__link" href="">
                             <picture class="card-item__cover">
                                 <span class="card-item__tag">Nuevo</span>
-                                <img class="card-item__img--front" src="../../img/star-wars/trooper-1.webp" alt="Figura colecionable Funko de un Stormtrooper">
+                                <img src="../../img/star-wars/trooper-1.webp" alt="Figura colecionable Funko de un Stormtrooper">
                             </picture>
                             <div class="card-item__content">
                                 <p class="card-item__license">STAR WARS</p>
@@ -118,12 +112,12 @@
                         </a>
                     </article>
                 </li>
-                <li class="slider__item">
+                <li class="shop__item">
                     <article class="card-item">
                         <a class="card-item__link" href="">
                             <picture class="card-item__cover">
                                 <span class="card-item__tag">Nuevo</span>
-                                <img class="card-item__img--front" src="../../img/pokemon/pidgeotto-1.webp" alt="Figura colecionable Funko dE Pidgeotto">
+                                <img  src="../../img/pokemon/pidgeotto-1.webp" alt="Figura colecionable Funko dE Pidgeotto">
                             </picture>
                             <div class="card-item__content">
                                 <p class="card-item__license">POKEMON</p>
@@ -134,12 +128,12 @@
                         </a>
                     </article>
                 </li>
-                <li class="slider__item">
+                <li class="shop__item">
                     <article class="card-item">
                         <a class="card-item__link" href="">
                             <picture class="card-item__cover">
                                 <span class="card-item__tag">Nuevo</span>
-                                <img class="card-item__img--front" src="../../img/harry-potter/luna-1.webp" alt="Figura colecionable Funko de Luna Lovegood">
+                                <img  src="../../img/harry-potter/luna-1.webp" alt="Figura colecionable Funko de Luna Lovegood">
                             </picture>
                             <div class="card-item__content">
                                 <p class="card-item__license">HARRY POTTER</p>
@@ -150,12 +144,12 @@
                         </a>
                     </article>
                 </li>
-                <li>
+                <li class="shop__item">
                     <article class="card-item">
                         <a class="card-item__link" href="">
                             <picture class="card-item__cover">
                                 <span class="card-item__tag">Nuevo</span>
-                                <img class="card-item__img--front" src="../../img/star-wars/trooper-1.webp" alt="Figura colecionable Funko de un Stormtrooper">
+                                <img  src="../../img/star-wars/trooper-1.webp" alt="Figura colecionable Funko de un Stormtrooper">
                             </picture>
                             <div class="card-item__content">
                                 <p class="card-item__license">STAR WARS</p>
@@ -166,12 +160,12 @@
                         </a>
                     </article>
                 </li>
-                <li class="slider__item">
+                <li class="shop__item">
                     <article class="card-item">
                         <a class="card-item__link" href="">
                             <picture class="card-item__cover">
                                 <span class="card-item__tag">Nuevo</span>
-                                <img class="card-item__img--front" src="../../img/pokemon/pidgeotto-1.webp" alt="Figura colecionable Funko dE Pidgeotto">
+                                <img  src="../../img/pokemon/pidgeotto-1.webp" alt="Figura colecionable Funko dE Pidgeotto">
                             </picture>
                             <div class="card-item__content">
                                 <p class="card-item__license">POKEMON</p>
@@ -182,12 +176,12 @@
                         </a>
                     </article>
                 </li>
-                <li class="slider__item">
+                <li>
                     <article class="card-item">
                         <a class="card-item__link" href="">
                             <picture class="card-item__cover">
                                 <span class="card-item__tag">Nuevo</span>
-                                <img class="card-item__img--front" src="../../img/harry-potter/luna-1.webp" alt="Figura colecionable Funko de Luna Lovegood">
+                                <img  src="../../img/harry-potter/luna-1.webp" alt="Figura colecionable Funko de Luna Lovegood">
                             </picture>
                             <div class="card-item__content">
                                 <p class="card-item__license">HARRY POTTER</p>
@@ -198,12 +192,12 @@
                         </a>
                     </article>
                 </li>
-                <li>
+                <li class="shop__item">
                     <article class="card-item">
                         <a class="card-item__link" href="">
                             <picture class="card-item__cover">
                                 <span class="card-item__tag">Nuevo</span>
-                                <img class="card-item__img--front" src="../../img/star-wars/trooper-1.webp" alt="Figura colecionable Funko de un Stormtrooper">
+                                <img  src="../../img/star-wars/trooper-1.webp" alt="Figura colecionable Funko de un Stormtrooper">
                             </picture>
                             <div class="card-item__content">
                                 <p class="card-item__license">STAR WARS</p>
@@ -214,12 +208,12 @@
                         </a>
                     </article>
                 </li>
-                <li class="slider__item">
+                <li class="shop__item">
                     <article class="card-item">
                         <a class="card-item__link" href="">
                             <picture class="card-item__cover">
                                 <span class="card-item__tag">Nuevo</span>
-                                <img class="card-item__img--front" src="../../img/pokemon/pidgeotto-1.webp" alt="Figura colecionable Funko dE Pidgeotto">
+                                <img  src="../../img/pokemon/pidgeotto-1.webp" alt="Figura colecionable Funko dE Pidgeotto">
                             </picture>
                             <div class="card-item__content">
                                 <p class="card-item__license">POKEMON</p>
@@ -230,12 +224,12 @@
                         </a>
                     </article>
                 </li>
-                <li class="slider__item">
+                <li class="shop__item">
                     <article class="card-item">
                         <a class="card-item__link" href="">
                             <picture class="card-item__cover">
                                 <span class="card-item__tag">Nuevo</span>
-                                <img class="card-item__img--front" src="../../img/harry-potter/luna-1.webp" alt="Figura colecionable Funko de Luna Lovegood">
+                                <img  src="../../img/harry-potter/luna-1.webp" alt="Figura colecionable Funko de Luna Lovegood">
                             </picture>
                             <div class="card-item__content">
                                 <p class="card-item__license">HARRY POTTER</p>
@@ -249,13 +243,33 @@
             </ul>
         </section>
     </main>
+    <section class="pagination">
+        <button>
+            <iconify-icon icon="mdi:chevron-left"></iconify-icon>
+        </button>
+        <button>
+            <span>1</span>
+        </button>
+        <button>
+            <span>2</span>
+        </button>
+        <button>
+            <span>3</span>
+        </button>
+        <button>
+            <span>4</span>
+        </button>
+        <button>
+            <iconify-icon icon="mdi:chevron-right"></iconify-icon>
+        </button>
+    </section>
     <footer class="footer">
         <nav class="navbar container">
             <ul class="navbar__item">
-                <li class="navbar__item"><a class="navbar__link" href="./shop.html">SHOP</a></li>
-                <li class="navbar__item"><a class="navbar__link" href="../register.html">REGISTRARSE</a></li>
-                <li class="navbar__item"><a class="navbar__link" href="../login.html">LOGIN</a></li>
-                <li class="navbar__item"><a class="navbar__link" href="../contact.html">CONTACTO</a></li>
+                <li class="navbar__item"><a class="navbar__link" href="../../pages/shop/shop.html">SHOP</a></li>
+                <li class="navbar__item"><a class="navbar__link" href="../../pages/admin/register.html">REGISTRARSE</a></li>
+                <li class="navbar__item"><a class="navbar__link" href="../../pages/admin/login.html">LOGIN</a></li>
+                <li class="navbar__item"><a class="navbar__link" href="../../pages/admin/contact.html">CONTACTO</a></li>
             </ul>
             <picture class="navbar__logo">
                 <img src="../../img/branding/isotype.svg" alt="Isotipo de la marca Funkoshop">
