--- a/pages/admin/login.html
+++ b/pages/admin/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CREATE | Funkoshop</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../../css/styles.css">
 
     <!--Google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,7 +19,7 @@
         <nav class="navbar container">
             <picture class="navbar__logo">
                 <a href="../index.html">
-                    <img src="../img/branding/logo_light_horizontal.svg" alt="Isologotipo de la marca Funkoshop">
+                    <img src="../../img/branding/logo_light_horizontal.svg" alt="Isologotipo de la marca Funkoshop">
                 </a>
             </picture>
             <ul class="navbar__menu">
@@ -46,7 +46,7 @@
                 <li class="navbar__item"><a class="navbar__link" href="./contact.html">CONTACTO</a></li>
             </ul>
             <picture class="navbar__logo">
-                <img src="../img/branding/isotype.svg" alt="Isotipo de la marca Funkoshop">
+                <img src="../../img/branding/isotype.svg" alt="Isotipo de la marca Funkoshop">
             </picture>
 
         </nav>
