--- a/pages/admin/admin.html
+++ b/pages/admin/admin.html
@@ -24,15 +24,35 @@
             </picture>
             <ul class="navbar__menu">
                 <li class="navbar__item">
-                    <a class="navbar__link" href="./shop/shop.html">VER TIENDA</a>
+                    <a class="navbar__link" href="../shop/shop.html">VER TIENDA</a>
                 </li>
                 <li class="navbar__item">
                     <a class="navbar__link" href="./admin.html">ADMIN</a>
                 </li>
                 <li class="navbar__item">
-                    <a class="navbar__link" href="../index.html">SALIR</a>
+                    <a class="navbar__link" href="../../index.html">SALIR</a>
                 </li>
             </ul>
+            <iconify-icon class="icon-bar open-menu " icon="fe:bar" id="open-menu"></iconify-icon>
+            <!--menu mobile-->
+            <aside class="aside-menu">
+                <button class="close-menu" id="close-menu">
+                    <iconify-icon icon="material-symbols:close"></iconify-icon>
+                </button>
+                <nav>
+                    <ul class="menu">
+                        <li class="navbar__item with-submenu">
+                            <a  class="navbar__link with-icon" href="../shop/shop.html"> VER TIENDA</a>
+                        </li>
+                        <li class="navbar__item">
+                            <a class="navbar__link" href="./admin.html">ADMIN</a>
+                        </li>
+                        <li class="navbar__item">
+                            <a  class="navbar__link"href="../../index.html">SALIR<</a>
+                        </li>
+                    </ul>
+                </nav>
+            </aside>
         </nav>
     </header><!--Fin Header-->
 
@@ -40,18 +60,21 @@
     <footer class="footer">
         <nav class="navbar container">
             <ul class="navbar__item">
-                <li class="navbar__item"><a class="navbar__link" href="./shop/shop.html">SHOP</a></li>
+                <li class="navbar__item"><a class="navbar__link" href="../shop/shop.html">SHOP</a></li>
                 <li class="navbar__item"><a class="navbar__link" href="./register.html">REGISTRARSE</a></li>
                 <li class="navbar__item"><a class="navbar__link" href="./login.html">LOGIN</a></li>
                 <li class="navbar__item"><a class="navbar__link" href="./contact.html">CONTACTO</a></li>
             </ul>
             <picture class="navbar__logo">
-                <img src="../img/branding/isotype.svg" alt="Isotipo de la marca Funkoshop">
+                <img src="../../img/branding/isotype.svg" alt="Isotipo de la marca Funkoshop">
             </picture>
 
         </nav>
         <p class="footer__copy">All rights reserved 2023 - Funkoshop &copy;</p>
 </footer>
 
+    <!--Iconos-->
+    <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
 
+    <script src="../../js/menu-mobile.js"></script>
 </body>
